# AU-Timetable

./: CMakeLists.txt  README.md  cases.cpp  cases.h  main.cpp  reader.cpp  reader.h
